# MC-Calib

./: .gitignore  apply_extrinsic_to_fusion.py
McCalib/include/: McCalib.hpp
McCalib/src/: McCalib.cpp  utilities.cpp
configs/Real_images/: my_calib2.yml
configs/Real_images/intrinsics/: new_zed2.yml  three_cams.yml  two_cams.yml
python_utils/: display_cam_obj_pose.py  post_calibration_analysis.py
record_dataset/: acquire_continously.py  acquire_with_gui.py
viewer/: CMakeLists.txt  download_yolo.py  perform_icp.py
viewer/include/viewer/: utils.h
viewer/src/: refine_calibration.cpp  viewer.cpp
